feat: ゴミ箱ダイアログに「選択を完全削除」機能を追加
- 複数のタブを選択した際の一括完全削除ボタンと確認ダイアログを追加
- 日本語と英語の翻訳リソースを追加
- 動作検証のためのE2Eテストケースを追加

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -465,7 +465,9 @@
             "deletedAt": "Deleted {days} days ago",
             "deletedToday": "Deleted today",
             "itemCount": "{count} tabs",
-            "searchPlaceholder": "Search trash..."
+            "searchPlaceholder": "Search trash...",
+            "deleteSelectedPermanently": "Delete Selected Permanently",
+            "deleteSelectedConfirm": "Are you sure you want to permanently delete {count} selected tabs? This action cannot be undone."
         }
     },
     "contextMenu": {
